# pygments-openssl

./: CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  README.txt  lexer.py  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
pygments_openssl/: lexer.py
pygments_openssl/tests/: test_lexer.py
tests/: test_installation.py  test_lexer.py
