[metadata]
name = pygments-openssl
version = 1.5
description = Syntax coloring for OpenSSL configuration files
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Text Processing :: Filters
keywords = sphinx pygments openssl conf lexer openssl.cnf
author = Stefan H. Holek
author_email = stefan@epy.co.at
url = https://github.com/stefanholek/pygments-openssl
license = BSD-2-Clause

[options]
packages = find:
install_requires =
    setuptools
    pygments
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.entry_points]
pygments.lexers =
    openssl = pygments_openssl.lexer:OpenSSLConfLexer

[egg_info]
tag_build = dev0

[bdist_wheel]
universal = true
